SOme customisation, branding testing

--- a/app/templates/about-room.hbs
+++ b/app/templates/about-room.hbs
@@ -1,5 +1,5 @@
 {{#modal-dialog action="closeModal"}}
-  <h2 class="logo"><span>ShareDrop</span></h2>
+  <h2 class="logo"><span>FlyMyFile</span></h2>
   <h3>Sharing files between devices in different networks</h3>
 
   <p>
