--- a/app/styles/layout/_header.sass
+++ b/app/styles/layout/_header.sass
@@ -13,7 +13,7 @@
       height: 38px
       width: 162px
       margin: 15px 0 0 15px
-      background: transparent image-url("assets/images/sharedrop.svg") no-repeat left top
+      background: transparent image-url("assets/images/flymyfile.png") no-repeat left top
       .logo-title
         display: none
       .logo-subtitle
