--- a/app/templates/about-you.hbs
+++ b/app/templates/about-you.hbs
@@ -1,4 +1,4 @@
-ShareDrop lets you share files with others.
+FLyMyFile lets you share files with others.
 Other people will see you as
 <b>
 {{#if controller.hasCustomRoomName}}
